# ML-DecisionTree

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
decision_tree/: decision_tree_clf.py  decision_tree_reg.py
examples/classification/: .config  classification_example.py
examples/regression/: .config  regression_examples.py
examples/stepik/: stepik_classification.py  tree1.config  tree2.config  tree3.config  tree4.config  tree5.config  tree6.config
examples/stepik/classification/: stepik_classification.py
examples/stepik/classification/configs/: tree2.config  tree3.config  tree5.config  tree6.config
examples/stepik/classification/configs_bins/: tree3.config  tree6.config
examples/stepik/classification/configs_criterion/: tree2.config  tree4.config  tree5.config  tree6.config
examples/stepik/configs/: tree1.config  tree4.config
examples/stepik/configs_criterion/: tree3.config
examples/stepik/configs_gini/: tree1.config  tree3.config
examples/stepik/regression/: stepik_regression.py
examples/stepik/regression/configs/: tree1.config  tree3.config  tree4.config  tree5.config  tree6.config
examples/stepik/regression/configs_bins/: tree3.config  tree4.config  tree6.config
helpers/: cli_parser.py  config_parser.py
src/: decision_tree_clf.py  decision_tree_reg.py
tests/: test_decision_tree_classification.py  test_decision_tree_regression.py
